# pakistan-cnic-kyc

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
App/services/: __init__.py  extractor.py  ocr_services.py  parser.py  validator.py
