[project]
name = "pakistan-cnic-kyc"
version = "1.0.0"
description = "AI-Powered Pakistan CNIC KYC Verification System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "easyocr>=1.7.2",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pdf2image>=1.17.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
